# llint

./: README.md  llint.cabal  stack.yaml
app/: Main.hs
src/: Data.hs  HasPos.hs  Infer.hs  Queries.hs  Static.hs  Style.hs  Trav.hs
