name:                llint
version:             0.1.0.0
synopsis:            Lua linter
description:         Lua linter
homepage:            https://github.com/mitchellwrosen/llint
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HasPos
                     , Infer
                     , Static
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , language-lua2
                     , microlens
                     , mtl
                     , srcloc
                     , semigroups
                     , text
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , OverloadedLists
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
                     , ViewPatterns
  ghc-options:        -Wall

executable llint
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , language-lua2
                     , llint
                     , mtl
                     , text
                     , uniplate
  default-language:    Haskell2010

test-suite llint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , llint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/llint
